Minor overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,9 @@ html, body {
 body {
   overflow-x: hidden; }
 
+section {
+  overflow-x: hidden; }
+
 .flex {
   display: flex; }
 
