--- a/scss/general.scss
+++ b/scss/general.scss
@@ -5,9 +5,14 @@ html, body {
     font-size: 100%;
     color: #FFF;
     height: 100%;
+    
 }
 
 body {
+    overflow-x: hidden;
+}
+
+section {
     overflow-x: hidden;
 }
 
